# lithic

./: .gitignore  CHANGELOG.md  README.md  cabal.project  lithic.cabal  stack.yaml
.github/: copilot-instructions.md
app/: Main.hs
docs/: architecture-vs-type-system.md  cabal-project.md  higher-rank-types.md  optimizations.md  project-plan.md  terminal-effect.md  typechecker.md
src/Compiler/: AST.hs  Lexer.hs  Parser.hs  REPL.hs  TUI.hs  TypeChecker.hs
test/: Main.hs
test/golden/: comprehensive.golden  comprehensive.lithic  fail-lens-mod-type.golden  fail-lens-mod-type.lithic  fail-lens-set-type.golden  fail-lens-set-type.lithic  fail-missing-field.golden  fail-missing-field.lithic  fail-strict-record-mismatch.golden  fail-strict-record-mismatch.lithic  lens-modify.golden  lens-modify.lithic  lens-set.golden  lens-set.lithic  let-poly.golden  let-poly.lithic  occurs-check.golden  occurs-check.lithic  rank2-rigid-fail.golden  rank2-rigid-fail.lithic  rank2-success.golden  rank2-success.lithic  record-basic.golden  record-basic.lithic  row-shift.golden  row-shift.lithic
