cabal-version:      3.4
name:               lithic
version:            0.5.1.0
build-type:         Simple
license:            NONE
author:             Eric Vincent (arch)
maintainer:         eric@efvincent.com
extra-doc-files:    CHANGELOG.md

common shared
    ghc-options: -Wall 
                 -Wcompat 
    build-depends:
        base >= 4.19 && < 5,
        bluefin,
        vector,
        text,
        microlens,
        generic-lens,
        brick,
        vty,
        vty-crossplatform,
        containers
    default-extensions:
        BlockArguments
        LambdaCase
        OverloadedStrings
        OverloadedRecordDot
        DataKinds
        DuplicateRecordFields
        OverloadedLabels

library
    import:           shared
    exposed-modules:  Compiler.AST
                    , Compiler.Lexer
                    , Compiler.Parser
                    , Compiler.TypeChecker
                    , Compiler.REPL
                    , Compiler.TUI
    build-depends:    base >= 4.19 && < 5
                    , bluefin
                    , generic-lens
                    , microlens
                    , text
    hs-source-dirs:   src
    default-language: GHC2024

executable lithic-cli
    import:           shared
    main-is:          Main.hs
    build-depends:    base
                    , lithic
                    , text
    hs-source-dirs:   app
    default-language: GHC2024
    ghc-options:      -threaded
    
test-suite lithic-test
    import:           shared
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base
                    , lithic
                    , text
                    , bytestring
                    , filepath
                    , tasty
                    , tasty-golden
                    , tasty-hunit
                    , bluefin
                    , containers
    default-language: GHC2024
    ghc-options:      -threaded -rtsopts -with-rtsopts=-N